back-helm/templates/ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: foodyhive-ser
spec:
  selector:
    app: foodyhiveb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
