back-helm/templates/ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: foodyhiveapi-ingress
  namespace: default
spec:
  rules:
    - host: myingress.eastus.cloudapp.azure.com
      http:
        paths:
        - path: /
          backend:
            serviceName: foodyhive-ser
            servicePort: 80
  tls:
    - hosts:
        - myingress.eastus.cloudapp.azure.com
      secretName: ingress-secret-dev
